practice for es6

--- a/meal.html
+++ b/meal.html
@@ -27,10 +27,15 @@
     <section class="field">
 
         <div class="input-group mb-3  w-75 mx-auto">
-            <input id="search-field" type="text" class="form-control" placeholder="Recipient's username"
+            <input id="search-field" type="text" class="form-control" placeholder="Search Your Desired Food"
                 aria-label="Recipient's username" aria-describedby="button-addon2">
             <button onclick="searchFood()" class="btn btn-outline-secondary button" type="button"
                 id="button-addon2">search</button>
+        </div>
+    </section>
+    <section>
+
+        <div class="spinner-border text-light mx-auto" id="spinner"><span class="visually-hidden">Loading...</span>
         </div>
     </section>
     <br><br><br><br><br><br> <br><br><br><br><br><br>
